# data-centric-mlops-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
data/processed/: .gitignore  green_tripdata_2025-01-cleaned.parquet  green_tripdata_2025-01-cleaned.parquet.dvc  green_tripdata_2025-02-cleaned.parquet.dvc  green_tripdata_2025-03-cleaned.parquet.dvc  green_tripdata_2025-04-cleaned.parquet.dvc
notebook/: data_exploration.ipynb
src/data/: clean.py  ingest.py
tests/: test_main.py
